<resources>
    <string name="app_name">Running Tracker</string>
    <string name="new_track">New Tracking</string>
    <string name="resume_track">Resume Tracking</string>
    <string name="view_tracks">View tracks</string>
    <string name="no_distance">0.000m</string>
    <string name="no_duration">00:00:00</string>
    <string name="no_speed">0km/h</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="distance">DISTANCE</string>
    <string name="speed">SPEED</string>
    <string name="duration">DURATION</string>
    <string name="start_tracking">Start</string>
    <string name="stop">Stop</string>
    <string name="start_sentence">This track was ran at</string>
    <string name="endAt">End: </string>
    <string name="best_track_sentence">Your best track was at</string>
    <string name="no_track_sentence">You seem to have no saved tracks. Create one now?</string>
    <string name="no_track_tomonth">No track this month. Create one now!</string>
    <string name="no_track_today">No track today. Create one now!</string>
    <string name="at">at</string>
    <string name="total_distance">Total Distance</string>
    <string name="ave_distance">Average Distance</string>
    <string name="best_track">Best Track</string>
    <string name="title_activity_maps">Map</string>
</resources>